--- a/index.html
+++ b/index.html
@@ -2,42 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Superman tribute</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <div id="main">
-  <h1 id="title">Dr. Norman Borlaug</h1>
+  <h1 id="title">Superman</h1>
   <div>The man who saved a billion lives</div>
   <div id="img-div">
     <img id="image" src="https://www.maxim.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_700/MTU0MTc4MDQ4MTQ3NTk2NjI0/nicolas-cage-superman-main.webp" alt "pic from flickr">
     <div id="img-caption">
-      Dr. Norman Borlaug, second from left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.
+      Superman was born on the planet Krypton, and as a baby named Kal-El, was sent to Earth in a small spaceship by his scientist father Jor-El, moments before Krypton was destroyed in a natural cataclysm.
     </div>
   </div>
   <div id="tribute-info">
     <ul>
-      <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
-      <li><strong>1914</strong> - Born in Cresco, Iowa</li>
-      <li><strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
-      <li><strong>1935</strong> - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me."</li>
-      <li><strong>1937</strong> - Finishes university and takes a job in the US Forestry Service</li>
-      <li><strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.</li>
-      <li><strong>1941</strong> - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disenfectants, and other applied science.</li>
-      <li><strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology</li>
-      <li><strong>1944</strong> - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease resistent
-        wheat - including different varieties for each major climate on Earth.</li>
-      <li><strong>1945</strong> - Discovers a way to grown wheat twice each season, doubling wheat yields</li>
-      <li><strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a strain that responds well to fertalizer. It goes on to provide 95% of Mexico's wheat.</li>
-      <li><strong>1962</strong> - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population</li>
-      <li><strong>1970</strong> - receives the Nobel Peace Prize</li>
-      <li><strong>1983</strong> - helps seven African countries dramatically increase their maize and sorghum yields</li>
-      <li><strong>1984</strong> - becomes a distinguished professor at Texas A&M University</li>
-      <li><strong>2005</strong> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous
-        because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
-      <li><strong>2009</strong> - dies at the age of 95.</li>
+      <h3 id="headline">Here's some info about his life:</h3>
+      <li>His ship landed in the American countryside, where he was discovered and adopted by Jonathan and Martha Kent, a farming couple. They named him Clark. Clark displayed various superhuman abilities such as incredible strength and impervious skin, and his foster parents advised him to use his gifts for the benefit of humanity. Clark Kent resides in the fictional American city of Metropolis, where he works as a journalist for the Daily Planet, a newspaper. To protect his privacy, he changes into a colorful costume and uses the alias "Superman" when fighting crime. Superman's love interest is his fellow journalist Lois Lane, and his classic archenemy is the genius inventor Lex Luthor. He is a friend of many other superheroes in the DC Universe, such as Batman and Wonder Woman.</li>
+      
     </ul>
     <blockquote>
       <p>"Superman's life and achievement are testimony to the far-reaching strenght that one man's towering intellect, persistence and laser vision can make to human peace and progress."</p>
