--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1 id="title">Superman</h1>
   <div>The man who saved a billion lives</div>
   <div id="img-div">
-    <img id="image" src="https://www.maxim.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_700/MTU0MTc4MDQ4MTQ3NTk2NjI0/nicolas-cage-superman-main.webp" alt "pic from flickr">
+    <img id="image" src="https://i.kinja-img.com/gawker-media/image/upload/s--63NizbGt--/c_scale,f_auto,fl_progressive,q_80,w_800/ytsnyumkkavjl8gk5iz9.png" alt "pic from flickr">
     <div id="img-caption">
       Superman was born on the planet Krypton, and as a baby named Kal-El, was sent to Earth in a small spaceship by his scientist father Jor-El, moments before Krypton was destroyed in a natural cataclysm.
     </div>
