--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
     <title>Superman tribute</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <div id="main">
-  <h1 id="title">Superman</h1>
-  <div>The man who saved a billion lives</div>
-  <div id="img-div">
-    <img id="image" src="https://i.kinja-img.com/gawker-media/image/upload/s--63NizbGt--/c_scale,f_auto,fl_progressive,q_80,w_800/ytsnyumkkavjl8gk5iz9.png" alt "pic from flickr">
-    <div id="img-caption">
-      Superman was born on the planet Krypton, and as a baby named Kal-El, was sent to Earth in a small spaceship by his scientist father Jor-El, moments before Krypton was destroyed in a natural cataclysm.
+      <h1 id="title">Superman</h1>
+      <div>The man who saved a billion lives</div>
+      <div id="img-div">
+        <img id="image" src="https://i.kinja-img.com/gawker-media/image/upload/s--63NizbGt--/c_scale,f_auto,fl_progressive,q_80,w_800/ytsnyumkkavjl8gk5iz9.png" alt "pic from flickr">
+        <div id="img-caption">
+          Superman was born on the planet Krypton, and as a baby named Kal-El, was sent to Earth in a small spaceship by his scientist father Jor-El, moments before Krypton was destroyed in a natural cataclysm.
+        </div>
+      </div>
+      <div id="tribute-info">
+        <ul>
+          <h3 id="headline">Here's some info about his life:</h3>
+          <li>His ship landed in the American countryside, where he was discovered and adopted by Jonathan and Martha Kent, a farming couple. They named him Clark. Clark displayed various superhuman abilities such as incredible strength and impervious skin, and his foster parents advised him to use his gifts for the benefit of humanity. Clark Kent resides in the fictional American city of Metropolis, where he works as a journalist for the Daily Planet, a newspaper. To protect his privacy, he changes into a colorful costume and uses the alias "Superman" when fighting crime. Superman's love interest is his fellow journalist Lois Lane, and his classic archenemy is the genius inventor Lex Luthor. He is a friend of many other superheroes in the DC Universe, such as Batman and Wonder Woman.</li>
+
+        </ul>
+        <blockquote>
+          <p>"Superman's life and achievement are testimony to the far-reaching strenght that one man's towering intellect, persistence and laser vision can make to human peace and progress."</p>
+          <div>-- Kyrptonian Prime Minister Superman</div>
+        </blockquote>
+        <h3>If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Superman" target="_blank">Wikipedia entry</a>.</h3>
+      </div>
     </div>
-  </div>
-  <div id="tribute-info">
-    <ul>
-      <h3 id="headline">Here's some info about his life:</h3>
-      <li>His ship landed in the American countryside, where he was discovered and adopted by Jonathan and Martha Kent, a farming couple. They named him Clark. Clark displayed various superhuman abilities such as incredible strength and impervious skin, and his foster parents advised him to use his gifts for the benefit of humanity. Clark Kent resides in the fictional American city of Metropolis, where he works as a journalist for the Daily Planet, a newspaper. To protect his privacy, he changes into a colorful costume and uses the alias "Superman" when fighting crime. Superman's love interest is his fellow journalist Lois Lane, and his classic archenemy is the genius inventor Lex Luthor. He is a friend of many other superheroes in the DC Universe, such as Batman and Wonder Woman.</li>
-      
-    </ul>
-    <blockquote>
-      <p>"Superman's life and achievement are testimony to the far-reaching strenght that one man's towering intellect, persistence and laser vision can make to human peace and progress."</p>
-      <div>-- Kyrptonian Prime Minister Superman</div>
-    </blockquote>
-    <h3>If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Superman" target="_blank">Wikipedia entry</a>.</h3>
-  </div>
-</div>
+    <!-- html prettified -->
   </body>
 </html>
