--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
         <h3>If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Superman" target="_blank">Wikipedia entry</a>.</h3>
       </div>
     </div>
+    <!-- pretty -->
   </body>
 </html>
